# wishlist

./: Dockerfile  README.md  alembic.ini  bun.lockb  docker-compose.yaml  index.tsx  nginx.conf  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 13978f058142_init.py  68cb37a8cd13_extend_text_field.py
wishlist/: __init__.py  __main__.py
wishlist/templates/: index.jinja2
